# clickproj

./: .gitignore  LICENSE  MANIFEST.in  README.md  publish.sh  pyproject.toml  setup.cfg  setup.py
commands/: interactive_group.py
commands/cli/: cli.py
commands/cli/greet/: greet.py
commands/cli/user/: user.py
